Fixed some scaling/layout issues with add-ons; updated section to allow for 5 icons and better layout at mobile (2-up).

--- a/src/styles/product.scss
+++ b/src/styles/product.scss
@@ -597,6 +597,8 @@ $spacing: 20px;
     .product-options {
       display: flex;
       align-items: flex-end;
+      flex-wrap: wrap;
+
       .option {
         display: flex;
         flex-direction: column;
@@ -604,19 +606,32 @@ $spacing: 20px;
         font-size: 20px;
         font-weight: 700;
         margin-bottom: 20px;
+        width: calc(50% - 20px);
+        max-width: 235px;
+        @include media('>=tablet') {
+          width: calc(20% - 20px);
+        }
         span {
           padding-bottom: 10px;
         }
+
         svg {
-          max-width: 200px;
-          max-height: 200px;
-          width: 100%;
           .bg {
             fill: $prussian-blue60;
           }
         }
-        &:not(:first-child) {
-          margin-left: 9%;
+        margin-left: 40px;
+        &:nth-of-type(2n + 1) {
+          margin-left: 0px;
+        }
+        @include media('>=tablet') {
+          margin-left: 20px;
+          &:nth-of-type(2n + 1) {
+            margin-left: 20px;
+          }
+          &:nth-of-type(5n + 1) {
+            margin-left: 0px;
+          }
         }
         &.orange {
           svg {
